--- a/server/homework_2/templates/clients.html
+++ b/server/homework_2/templates/clients.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block content %}
+<div class="main_link_position">
+    <a class="main_link" href="{% url 'client_add' %}">Добавить клиента</a>
+</div>
 <table>
     <th>Имя</th>
     <th>Email</th>
