--- a/server/homework_2/templates/orders.html
+++ b/server/homework_2/templates/orders.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block content %}
+<div class="main_link_position">
+    <a class="main_link" href="{% url 'order_add' %}">Добавить заказ</a>
+</div>
 <table>
     <th>Заказчик</th>
     <th>Продукт</th>
